--- a/A/Altice/AlticeDecemberCreative/ads/OPT_AO_64/160x600/160x600_frame2.html
+++ b/A/Altice/AlticeDecemberCreative/ads/OPT_AO_64/160x600/160x600_frame2.html
@@ -52,25 +52,6 @@
         background-color: #fff;
         transform-origin: top center;
       }
-      .star {
-        position: absolute;
-        top: 0px;
-        width: 12px;
-        height: 12px;
-      }
-      .star-container {
-        position: absolute;
-        top: 51px;
-        width: 12px;
-        height: 12px;
-      }
-      .raise {
-        overflow: hidden;
-      }
-      .raise_txt {
-        transition: all 0.3s ease-out;
-        -webkit-transition: all 0.3s ease-out;
-      }
       #cta { background-color: !{ctaBtn}; }
       #cta:hover { background-color: !{ctaBtnHover}; }
       #introCta { background: !{ctaBtn}; }
@@ -80,11 +61,11 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_BFPFL_ACQ_AO_AmzMini_64PFL_NonSub_NY_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_Holiday_AO_64_Img_Frame02.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
 amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_AmzCard100_Frame04.png");
-amo.registerAttribute("frameText1","TEXT","<font style='color:#fff;'><div class='raise'><div class='raise_txt'>BL<span style='left:1px;'>A</span>CK</div></div> <div class='raise'><div class='raise_txt'>FRIDAY</div></div><div class='raise'><div class='raise_txt' style='padding-top: 1px;padding-left: 3px;font-size: 40%;color:#fff;letter-spacing: 0px;'>Now - Dec 1<sup style='font-size: 67%;'>st</sup></div></font>");
+amo.registerAttribute("frameText1","TEXT","Get<br>the gift that|Keeps<br>on<br>giving");
 amo.registerAttribute("frameText21","TEXT","<div style='top: 58px;left:15px;line-height: 1;'><div style='font-size: 24px;letter-spacing: -0.2px;'><div style='color: #0084d6;font-size: 75%;margin-bottom: 3px;'>Price for Life</div>Altice One<br>+ Internet</div></div>");
 amo.registerAttribute("frameText22","TEXT","<div style='top: 122px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
@@ -97,7 +78,6 @@ amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='to
 amo.registerAttribute("frameText51","TEXT","<div style='top: 110px;left:15px;line-height:0.9;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Altice One<br>+ Internet</div></div>");
 amo.registerAttribute("frameText52","TEXT","<div style='top: 152px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;line-height: 1.5;font-size: 13px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>$100 Amazon.com</div><div style='margin-top: -5px;margin-left:14px;'>Gift Card</div><div><span style='color:#0084d6;padding-right: 5px;'>+</span>No Annual</div><div style='margin-top: -5px;margin-left:14px;'>Contract</div><div style='position: absolute;top: -20px;left: -1px;width: 128px;border: 1px solid #aaabac;'></div></div>");
-amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -126,7 +106,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
         width:inherit;
         height:inherit;">
     </div>
-
+    <div id="frameBackground" class="asset" data-image="frameBackground" style="top:0px;left:0px;width:inherit;height:inherit;display:none;"></div>
     <div id="frameImage2" class="asset" data-image="frameImage2" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(100%);transform:translateX(100%);-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;"></div>
     <div id="frameText21" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText21}</div>
     <div id="frameText22" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText22}</div>
@@ -157,17 +137,15 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
       style="transform-origin:bottom center;
       -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
-      background-color:#2890dd;
+      background-color:#e2e3e4;
       opacity:1;">
-      <!-- <div id="frameImage1" class="asset"
-        data-image="frameImage1"
-        style="top:315px;
-          left:-10px;
-          width:180px;
-          height:180px;
-          -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
-          transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;">
-      </div> -->
+      <div id="introImage3" class="asset"
+        data-image="introImage3"
+        style="top:0px;
+          left:0px;
+          width:inherit;
+          height:inherit;">
+      </div>
       <!-- <div id="ref" class="asset"
         data-image="ref"
         style="top:0px;
@@ -175,22 +153,41 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
           width:inherit;
           height:inherit;">
       </div> -->
-      <div id="frameVideo1"
-        style="top: 328px;
-          left: -50px;
-          width: 660px;
-          height: 124px;">
-          <video muted playsinline autoplay style="width:100%;"></video>
-      </div>
-      <div id="frameText1" class="text-top-left AlticeBold"
-        data-text="frameText1"
-        style="top: 57px;
+      <div id="introText2" class="text-left AlticeBold"
+        data-text="introText2"
+        style="top: 96px;
           left: 15px;
-          width: 140px;
-          height: 150px;
-          font-size: 38px;
-          line-height: 0.85;
-          letter-spacing:0px;
+          width: 130px;
+          height: 160px;
+          font-size: 32px;
+          line-height: 1.05;
+          letter-spacing: 0px;
+          font-weight: bold;
+          color:#292562;">
+      </div>
+      <div id="introImage2" class="asset"
+        data-image="introImage2"
+        style="top:0px;
+          left:0px;
+          width:inherit;
+          height:inherit;">
+      </div>
+      <div id="introImage1" class="asset"
+        data-image="introImage1"
+        style="top:0px;
+          left:0px;
+          width:inherit;
+          height:inherit;">
+      </div>
+      <div id="introText1" class="text-left AlticeBold"
+        data-text="introText1"
+        style="top: 96px;
+          left: 15px;
+          width: 130px;
+          height: 160px;
+          font-size: 32px;
+          line-height: 1.05;
+          letter-spacing: 0px;
           font-weight: bold;
           color:#fff;">
       </div>
@@ -218,6 +215,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
     <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
   </div>
   <script type="text/javascript">
+    var introText1 = '', introText2 = '';
     var ad = new Ad({
       root: document.querySelector('#ad'),
       width: 160,
@@ -233,6 +231,11 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
           logoImage: 'images/160x600_Logo_Optimum.png',
           introLogoImage: 'images/160x600_Logo_Optimum_White.png',
           priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+          frameBackground: '160x600_OPT_Holiday_AO_64_CornerTear_Img_Frame04.png',
+          priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+          introImage1: '160x600_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame01.png',
+          introImage2: '160x600_OPT_Holiday_AO_64_WrappingPaper_Half_Img_Frame01.png',
+          introImage3: '160x600_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame02.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
@@ -240,7 +243,8 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
         },
         beforeLoad: function(data){
           data.map(function(content){
-
+            introText2 = content.frameText1.split('|')[1];
+            introText1 = content.frameText1.split('|')[0];
           });
           return data;
         }
@@ -249,7 +253,8 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
+        ad.layers.introText1.querySelector('span').innerHTML = introText1;
+        ad.layers.introText2.querySelector('span').innerHTML = introText2;
         var playOtherFrames = function(){};
                       (function(){
                       ad.layers.cta.style.opacity = 1;
@@ -272,6 +277,7 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
                           ad.layers.frameText23.style.webkitTransform = '';
                           ad.layers.frameText23.style.transform = '';
                         }
+                        
                         
                       },1000);}())
                     var playOtherFrames1 = function(){
@@ -342,75 +348,19 @@ amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Blue.mp4");
               }, 3000);
           }, 10);
         }
-        var canvas = document.createElement('canvas');
-        var ctx = canvas.getContext('2d');
-        var video = ad.layers.frameVideo1.querySelector('video');
-        canvas.style.position = 'absolute';
-        canvas.style.top = '0';
-        canvas.style.left = '0';
-        // canvas.style.top = '50%';
-        // canvas.style.left = '50%';
-        // canvas.style.transform = 'translate(-50%, -50%)';
-        video.addEventListener('loadedmetadata', function() {
-          canvas.width = video.videoWidth;
-          canvas.height = video.videoHeight;
-        });
-        video.parentNode.appendChild(canvas);
-        ad.layers.frameVideo1.querySelector('video').onplay = function(){
-          canvas.style.width = video.offsetWidth+'px';
-          canvas.style.height = video.offsetHeight+'px';
-          var $this = this; //cache
-          (function loop() {
-              if (!$this.paused && !$this.ended) {
-                  ctx.drawImage($this, 0, 0);
-                  ad.layers.frame1.style.backgroundColor = 'rgba(' + ctx.getImageData(5, 2, 1, 1).data.join(',') + ')';
-                  setTimeout(loop, 1000 / 50); // drawing at 30fps
-              }
-          })();
-        }
-        ad.layers.frameVideo1.querySelector('video').onended = function(){
+        setTimeout(function(){
           setTimeout(function(){
-              playOtherFrames();
-          },500);
-        }
-
-        var raiseDivs = ad.layers.frameText1.getElementsByClassName('raise_txt');
-        var delay = 0;
-        for (var a = 0; a < raiseDivs.length; a++) {
-          raiseDivs[a].style.webkitTransform = 'translateY(100%)';
-          raiseDivs[a].style.transform = 'translateY(100%)';
-          raiseDivs[a].style.webkitTransitionDelay = delay+'ms';
-          raiseDivs[a].style.transitionDelay = delay+'ms';
-          delay+=100;
-        }
-
-        setTimeout(function() {
-          var raiseDivs = ad.layers.frameText1.getElementsByClassName('raise_txt');
-          for (var a = 0; a < raiseDivs.length; a++) {
-            raiseDivs[a].style.webkitTransform = '';
-            raiseDivs[a].style.transform = '';
-          }
-        }, 1500);
-        // var gifImagePath = ad.layers.frameImage1.querySelector('img').src;
-        // ad.layers.frameImage1.querySelector('img').src = 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABBJREFUeNpi+P//PwNAgAEACPwC/tuiTRYAAAAASUVORK5CYII=';
-        // setTimeout(function(){
-        //   ad.layers.frameImage1.querySelector('img').src = gifImagePath;
-        //   setTimeout(function(){
-        //     ad.layers.frameText1.style.webkitTransition = 'opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s';
-        //     ad.layers.frameText1.style.transition = 'opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s';
-        //     setTimeout(function(){
-        //       // ad.layers.frameImage1.style.opacity = 0;
-        //       // ad.layers.frameImage1.style.webkitTransform = 'translateX(50%)';
-        //       // ad.layers.frameImage1.style.transform = 'translateX(50%)';
-        //       // ad.layers.frameText1.style.opacity = 0;
-        //       // ad.layers.frameText1.style.webkitTransform = 'translateX(50%)';
-        //       // ad.layers.frameText1.style.transform = 'translateX(50%)';
-        //       setTimeout(function(){
-        //         playOtherFrames();
-        //       }, 1000);
-        //     },100);
-        //   },2600);
-        // }, 1000);
+              ad.layers.introImage1.style.display = 'none';
+              ad.layers.introText1.style.display = 'none';
+              setTimeout(function(){
+                  ad.layers.introImage2.style.display = 'none';
+                  ad.layers.introLogoImage.querySelector('img').src = adData.logoImage;
+                  setTimeout(function(){
+                      playOtherFrames();
+                  },1500);
+              },500);
+          },1500);
+        },800);
       });
     }, 2000);
   </script>
