--- a/A/Altice/AlticeDecemberCreative/ads/OPT_AO_64/300x250/300x250_frame1.html
+++ b/A/Altice/AlticeDecemberCreative/ads/OPT_AO_64/300x250/300x250_frame1.html
@@ -106,15 +106,15 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
         width:inherit;
         height:inherit;">
     </div>
-
+    <div id="frameBackground" class="asset" data-image="frameBackground" style="top:0px;left:0px;width:inherit;height:inherit;display:none;"></div>
     <div id="frameImage2" class="asset" data-image="frameImage2" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(100%);transform:translateX(100%);-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;"></div>
     <div id="frameText21" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText21}</div>
     <div id="frameText22" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText22}</div>
     <div id="frameText23" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText23}</div>
     <div id="frameImage3" class="asset" data-image="frameImage3" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(100%);transform:translateX(100%);-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;"></div>
     <div id="frameText31" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText31}</div>
-    <div id="frameText32" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText32}</div>
-    <div id="frameText33" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.2s;">!{frameText33}</div>
+    <div id="frameText32" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.7s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.7s;">!{frameText32}</div>
+    <div id="frameText33" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 1.4s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 1.4s;">!{frameText33}</div>
     <div id="frameImage4" class="asset" data-image="frameImage4" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(100%);transform:translateX(100%);-webkit-transition:opacity ease-out 0.3s,transform ease-out 0.3s;transition:opacity ease-out 0.3s,transform ease-out 0.3s;"></div>
     <div id="frameText41" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.0s;">!{frameText41}</div>
     <div id="frameText42" class="frameText" style="top:0px;left:0px;width:inherit;height:inherit;-webkit-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;transition:opacity ease-out 0.3s,transform 0.3s ease-out 0.1s;">!{frameText42}</div>
@@ -162,7 +162,8 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
           height: 60px;
           font-size: 31px;
           letter-spacing: -0.3px;
-          font-weight: bold;">
+          font-weight: bold;
+          color:#292562;">
       </div>
       <div id="introImage2" class="asset"
         data-image="introImage2"
@@ -178,8 +179,8 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
           width:inherit;
           height:inherit;">
       </div>
-      <div id="frameText1" class="text AlticeBold"
-        data-text="frameText1"
+      <div id="introText1" class="text AlticeBold"
+        data-text="introText1"
         data-style="text-align:center;"
         style="top: 88px;
           left: 10px;
@@ -215,7 +216,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
     <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
   </div>
   <script type="text/javascript">
-    var introText2 = '';
+    var introText1 = '', introText2 = '';
     var ad = new Ad({
       root: document.querySelector('#ad'),
       width: 300,
@@ -230,8 +231,9 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
         staticData: {
           logoImage: 'images/300x250_Logo_Optimum.png',
           introLogoImage: 'images/300x250_Logo_Optimum_White.png',
+          frameBackground: '300x250_OPT_Holiday_AO_64_CornerTear_Img_Frame04.png',
           priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
-          introImage1: '300x250_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame01.jpg',
+          introImage1: '300x250_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame01.png',
           introImage2: '300x250_OPT_Holiday_AO_64_WrappingPaper_Half_Img_Frame01.png',
           introImage3: '300x250_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame02.png',
           // starImage: 'images/star.svg',
@@ -241,10 +243,8 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
         },
         beforeLoad: function(data){
           data.map(function(content){
-            console.log(content.frameText1);
             introText2 = content.frameText1.split('|')[1];
-            // if(!introText2) debugger;
-            content.frameText1 = content.frameText1.split('|')[0];
+            introText1 = content.frameText1.split('|')[0];
           });
           return data;
         }
@@ -253,6 +253,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
+        ad.layers.introText1.querySelector('span').innerHTML = introText1;
         ad.layers.introText2.querySelector('span').innerHTML = introText2;
         textUpdate();
         var playOtherFrames = function(){};
@@ -292,6 +293,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
                     ad.layers.frameText32.style.opacity = 0;
                     ad.layers.frameText33.style.opacity = 0;
                     setTimeout(function(){
+                      ad.layers.frameBackground.style.display = 'block';
                       ad.layers.frameImage4.style.webkitTransform = '';
                       ad.layers.frameImage4.style.transform = '';
                       ad.layers.frameText41.style.webkitTransform = '';
@@ -305,6 +307,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
                         ad.layers.frameText41.style.opacity = 0;
                         ad.layers.frameText42.style.opacity = 0;
                         ad.layers.frameText43.style.opacity = 0;
+                        ad.layers.frameBackground.style.display = 'none';
                         setTimeout(function(){
                           ad.layers.frameImage5.style.webkitTransform = '';
                           ad.layers.frameImage5.style.transform = '';
@@ -319,7 +322,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
                         }, 200);
                       }, 3000);
                     }, 200);
-                  }, 3000);
+                  }, 3600);
                 }, 200);
               }, 3000);
           }, 10);
@@ -327,20 +330,16 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
         setTimeout(function(){
           setTimeout(function(){
               ad.layers.introImage1.style.display = 'none';
-              ad.layers.frameText1.style.display = 'none';
+              ad.layers.introText1.style.display = 'none';
               setTimeout(function(){
                   ad.layers.introImage2.style.display = 'none';
                   ad.layers.introLogoImage.querySelector('img').src = adData.logoImage;
                   setTimeout(function(){
                       playOtherFrames();
-                  },1200);
-              },1200);
-          },1200);
-          // setTimeout(function(){
-          //     playOtherFrames();
-          // },2600);
+                  },1500);
+              },500);
+          },1500);
         },800);
-
       });
     }, 2000);
   </script>
